--- a/templates/index.html
+++ b/templates/index.html
@@ -826,7 +826,7 @@ tr:nth-child(even) {
                               <i class="fas fa-hospital"></i>
                           </div>
                           <div class="card-body">
-                              <h5 class="card-title text-uppercase fw-semibold">Nearby Hospital</h5><br>
+                              <h5 class="card-title text-uppercase fw-semibold">Nearby Hospital</h5>
                               <p class="card-text text-capitalize fw-medium">Find nearby hospitals and healthcare facilities for immediate assistance.</p>
                               <a href="/hospital" class="btn btn-outline-light">Near By</a>
                           </div>
