--- a/templates/disease.html
+++ b/templates/disease.html
@@ -171,6 +171,9 @@
         <button id="predictButton" class="btn">Predict Disease</button>
         <div id="result" class="animate__animated animate__fadeInUp"></div>
         <div id="description" class="animate__animated animate__fadeInUp"></div>
+        <div class="bottom-links">
+            <a href="/hospital" class="btn">Nearby Hospitals</a>
+        </div>
         <button id="newPatientButton" class="btn btn-info" style="display: none;">New Patient</button>
     </div>
 
